--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
 	<head>
 		<meta charset="UTF-8" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Movie Ticket Booking</title>
 	</head>
-	<body>
-		<div id="root"></div>
+	<body
+		class="bg-slate-50 text-stone-900 dark:bg-slate-900 dark:text-slate-50 h-full"
+	>
+		<div id="root" class="h-full flex flex-col justify-between"></div>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
 </html>
