--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,12 +4,17 @@
 		<meta charset="UTF-8" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="stylesheet"
+			href="path/to/font-awesome/css/font-awesome.min.css"
+		/>
+
 		<title>Movie Ticket Booking</title>
 	</head>
 	<body
 		class="bg-slate-50 text-stone-900 dark:bg-slate-900 dark:text-slate-50 h-full"
 	>
-		<div id="root" class="h-full flex flex-col justify-between"></div>
+		<div id="root" class="h-full flex flex-col justify-start"></div>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
 </html>
