--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
 		<title>Movie Ticket Booking</title>
 	</head>
 	<body
-		class="bg-slate-50 text-stone-900 dark:bg-slate-900 dark:text-slate-50 h-full"
+		class="bg-slate-50 text-stone-900 dark:bg-slate-900 dark:text-slate-50 min-h-full"
 	>
 		<div id="root" class="h-full flex flex-col justify-start"></div>
 		<script type="module" src="/src/main.jsx"></script>
